cabal-version:      3.4
name:               hs
version:            0.2.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             dan
maintainer:         me@danrh.co.uk

build-type:         Simple

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: RestService,
                     BizExpr

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0,
                      text,
                      wai,
                      http-types,
                      warp,
                      aeson,
                      scotty,
                      containers,
                      stm
    hs-source-dirs:   src
    default-language: Haskell2010

executable repl
    main-is:          Repl.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.19.1.0,
        hs

    hs-source-dirs:   app
    default-language: Haskell2010

executable hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.19.1.0,
        hs

    hs-source-dirs:   app
    default-language: Haskell2010
